@@ -4,10 +4,10 @@
 #
 # Architecture names are formed as a combination of the system name
 # (from ostable) and CPU name (from this table) after mapping from
-# the Debian triplet (from triplettable).
+# the Debian arch tuple (from tupletable).
 #
 # - Column 1 is the Debian name for the CPU, used to form the cpu part in
-#   the Debian triplet.
+#   the Debian arch tuple.
 # - Column 2 is the GNU name for the CPU, used to output build, host and
 #   target variables in ‘dpkg-architecture’.
 # - Column 3 is an extended regular expression used to match against the
