@@ -1,42 +1,42 @@
-# Version=1.0
+# Version=2.0
 #
 # This file contains the table of known operating system names.
 #
 # Architecture names are formed as a combination of the system name
 # (from this table) and CPU name (from cputable) after mapping from
-# the Debian triplet (from triplettable).
+# the Debian arch tuple (from tupletable).
 #
 # - Column 1 is the Debian name for the system, used to form the system part
-#   in the Debian triplet.
+#   in the Debian arch tuple.
 # - Column 2 is the GNU name for the system, used to output build, host and
 #   target variables in ‘dpkg-architecture’.
 # - Column 3 is an extended regular expression used to match against the
 #   system part of the output of the GNU config.guess script.
 #
 # <Debian name>		<GNU name>		<config.guess regex>
-uclibceabi-linux	linux-uclibceabi	linux[^-]*-uclibceabi
-uclibc-linux		linux-uclibc		linux[^-]*-uclibc
-musleabihf-linux	linux-musleabihf	linux[^-]*-musleabihf
-musl-linux		linux-musl		linux[^-]*-musl
-gnueabihf-linux		linux-gnueabihf		linux[^-]*-gnueabihf
-gnueabi-linux		linux-gnueabi		linux[^-]*-gnueabi
-gnuabin32-linux		linux-gnuabin32		linux[^-]*-gnuabin32
-gnuabi64-linux		linux-gnuabi64		linux[^-]*-gnuabi64
-gnuspe-linux		linux-gnuspe		linux[^-]*-gnuspe
-gnux32-linux		linux-gnux32		linux[^-]*-gnux32
-gnu-linux		linux-gnu		linux[^-]*(-gnu.*)?
-gnueabihf-kfreebsd	kfreebsd-gnueabihf	kfreebsd[^-]*-gnueabihf
-gnu-kfreebsd		kfreebsd-gnu		kfreebsd[^-]*(-gnu.*)?
-gnu-knetbsd		knetbsd-gnu		knetbsd[^-]*(-gnu.*)?
-gnu-kopensolaris	kopensolaris-gnu	kopensolaris[^-]*(-gnu.*)?
-gnu-hurd		gnu			gnu[^-]*
-bsd-darwin		darwin			darwin[^-]*
-bsd-dragonflybsd	dragonflybsd		dragonfly[^-]*
-bsd-freebsd		freebsd			freebsd[^-]*
-bsd-netbsd		netbsd			netbsd[^-]*
-bsd-openbsd		openbsd			openbsd[^-]*
-sysv-aix		aix			aix[^-]*
-sysv-solaris		solaris			solaris[^-]*
-uclibceabi-uclinux	uclinux-uclibceabi	uclinux[^-]*-uclibceabi
-uclibc-uclinux		uclinux-uclibc		uclinux[^-]*(-uclibc.*)?
-tos-mint		mint			mint[^-]*
+eabi-uclibc-linux	linux-uclibceabi	linux[^-]*-uclibceabi
+base-uclibc-linux	linux-uclibc		linux[^-]*-uclibc
+eabihf-musl-linux	linux-musleabihf	linux[^-]*-musleabihf
+base-musl-linux		linux-musl		linux[^-]*-musl
+eabihf-gnu-linux	linux-gnueabihf		linux[^-]*-gnueabihf
+eabi-gnu-linux		linux-gnueabi		linux[^-]*-gnueabi
+abin32-gnu-linux	linux-gnuabin32		linux[^-]*-gnuabin32
+abi64-gnu-linux		linux-gnuabi64		linux[^-]*-gnuabi64
+spe-gnu-linux		linux-gnuspe		linux[^-]*-gnuspe
+x32-gnu-linux		linux-gnux32		linux[^-]*-gnux32
+base-gnu-linux		linux-gnu		linux[^-]*(-gnu.*)?
+eabihf-gnu-kfreebsd	kfreebsd-gnueabihf	kfreebsd[^-]*-gnueabihf
+base-gnu-kfreebsd	kfreebsd-gnu		kfreebsd[^-]*(-gnu.*)?
+base-gnu-knetbsd	knetbsd-gnu		knetbsd[^-]*(-gnu.*)?
+base-gnu-kopensolaris	kopensolaris-gnu	kopensolaris[^-]*(-gnu.*)?
+base-gnu-hurd		gnu			gnu[^-]*
+base-bsd-darwin		darwin			darwin[^-]*
+base-bsd-dragonflybsd	dragonflybsd		dragonfly[^-]*
+base-bsd-freebsd	freebsd			freebsd[^-]*
+base-bsd-netbsd		netbsd			netbsd[^-]*
+base-bsd-openbsd	openbsd			openbsd[^-]*
+base-sysv-aix		aix			aix[^-]*
+base-sysv-solaris	solaris			solaris[^-]*
+eabi-uclibc-uclinux	uclinux-uclibceabi	uclinux[^-]*-uclibceabi
+base-uclibc-uclinux	uclinux-uclibc		uclinux[^-]*(-uclibc.*)?
+base-tos-mint		mint			mint[^-]*
