@@ -1,0 +1,39 @@
+# Version=1.0
+#
+# Bidirectional mapping between a Debian arch tuple and a Debian arch name.
+#
+# Supported variables: <cpu>
+#
+# <Debian arch tuple>		<Debian arch name>
+eabi-uclibc-linux-arm		uclibc-linux-armel
+base-uclibc-linux-<cpu>		uclibc-linux-<cpu>
+eabihf-musl-linux-arm		musl-linux-armhf
+base-musl-linux-<cpu>		musl-linux-<cpu>
+eabihf-gnu-linux-arm		armhf
+eabi-gnu-linux-arm		armel
+abin32-gnu-linux-mips64r6el	mipsn32r6el
+abin32-gnu-linux-mips64r6	mipsn32r6
+abin32-gnu-linux-mips64el	mipsn32el
+abin32-gnu-linux-mips64		mipsn32
+abi64-gnu-linux-mips64r6el	mips64r6el
+abi64-gnu-linux-mips64r6	mips64r6
+abi64-gnu-linux-mips64el	mips64el
+abi64-gnu-linux-mips64		mips64
+spe-gnu-linux-powerpc		powerpcspe
+x32-gnu-linux-amd64		x32
+base-gnu-linux-<cpu>		<cpu>
+eabihf-gnu-kfreebsd-arm		kfreebsd-armhf
+base-gnu-kfreebsd-<cpu>		kfreebsd-<cpu>
+base-gnu-knetbsd-<cpu>		knetbsd-<cpu>
+base-gnu-kopensolaris-<cpu>	kopensolaris-<cpu>
+base-gnu-hurd-<cpu>		hurd-<cpu>
+base-bsd-dragonflybsd-<cpu>	dragonflybsd-<cpu>
+base-bsd-freebsd-<cpu>		freebsd-<cpu>
+base-bsd-openbsd-<cpu>		openbsd-<cpu>
+base-bsd-netbsd-<cpu>		netbsd-<cpu>
+base-bsd-darwin-<cpu>		darwin-<cpu>
+base-sysv-aix-<cpu>		aix-<cpu>
+base-sysv-solaris-<cpu>		solaris-<cpu>
+eabi-uclibc-uclinux-arm		uclinux-armel
+base-uclibc-uclinux-<cpu>	uclinux-<cpu>
+base-tos-mint-m68k		mint-m68k
