@@ -122,6 +122,8 @@ Multi-Arch: foreign
 Depends:
  ${misc:Depends},
  ${perl:Depends},
+# Needed for arch tuples.
+ dpkg (>= 1.18.11),
 Recommends:
 # Used by Dpkg::File.
  libfile-fcntllock-perl,
