@@ -58,6 +58,7 @@ dpkg (1.18.11) UNRELEASED; urgency=medium
   * Architecture support:
     - Add support for AIX operating system.
     - Add a version pseudo-field to the arch tables.
+    - Internally represent Debian architectures as quadruplets.
   * Portability:
     - Cast off_t variables to intmax_t when printing them with "%jd".
     - Add missing <string.h> include in libdpkg.
